# numbasom

./: .gitignore  00_core.ipynb  01_viz.ipynb  LICENSE  Makefile  README.md  RELEASING.md  index.ipynb  mkdocs.yml  numbasom.sublime-project  pyproject.toml  settings.ini  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
conda/numbasom/: meta.yaml
docs/: _config.yml  core.html  index.html  index.md  sidebar.json  viz.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/api/: core.md  viz.md
numbasom/: __init__.py  __main__.py  _nbdev.py  core.py  numbasom.py  som.py  somvis.py  viz.py
