[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numbasom"
version = "0.0.5"
description = "A Fast Self-Organizing Map Python Library Implemented in Numba"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Nikola Marincic", email = "nikola.marincic@gmail.com" }
]
keywords = ["SOM", "self-organizing map", "python", "numba", "AI", "ML", "kohonen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numba",
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/nmarincic/numbasom"
Documentation = "https://nmarincic.github.io/numbasom/"
Repository = "https://github.com/nmarincic/numbasom"
Issues = "https://github.com/nmarincic/numbasom/issues"

[tool.hatch.build.targets.wheel]
packages = ["numbasom"]
